Enable Signin With 'iiita.ac.in' Email

--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -3,6 +3,7 @@
 {% block title %}Homepage{% endblock %}
 
 {% block content %}
-Book A Room
+    Book A Room<br>
+    {{ user.username }}<br>
     <a href="{% url 'logout' %}">Logout</a>
 {% endblock %}
