Update Rooms After Deletion
Update Rooms After Deletion Of A Particular Request Using 'pre_delete'

--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -17,8 +17,8 @@
     </form>
     Current Requests :<br>
     {% if current_requests %}
-        {% for r in current_requests %}
-            {{ r.no_of_rooms_required }} -> {{ r.date_of_booking }} -> {{ r.status }}<br>
+        {% for r,b in mylist %}
+            {{ r.no_of_rooms_required }} -> {{ r.date_of_booking }} -> {{ r.status }} {% if r.status %} -> {{ b.room_no }} -> {{ b.hostel_allotted }}{% endif %}<br>
         {% endfor %}
     {% else %}
         None
