--- a/templates/homepage/home.html
+++ b/templates/homepage/home.html
@@ -1,41 +1,201 @@
 {% extends 'base.html' %}
-
-{% block title %}Homepage{% endblock %}
-
+{% load staticfiles %}
+{% block title %}Welcome{% endblock %}
 {% block content %}
-    Total Available Rooms : {{ rooms }}<br>
-    {% if not current_request %}
-        Book A Room<br>
-        {{ user.username }}<br>
-        <a href="{% url 'logout' %}">Logout<br></a>
-        {% if msg %}
-            {{ msg }}<br>
-        {% endif %}
-        <form method="POST">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Submit</button>
-        </form>
-    {% else %}
-        Current Requests :<br>
-        No. Of Rooms Required : {{ current_request.no_of_rooms_required }}<br>
-        From Date : {{ current_request.from_date }}<br>
-        To Date : {{ current_request.to_date }}<br>
-        Room Preference : {{ current_request.room_preference }}<br>
-        Status : {% if current_request.status %}Confirmed{% else %}Not Confirmed Yet{% endif %}<br>
+    <div class="wrapper">
+    <div class="sidebar" data-color="purple" data-image="{% static 'assets/img/iiita.jpeg' %}">
 
-        {% if not current_request.status %}
-            <a href="{% url 'edit' %}">
-                <button>Edit</button>
-            </a>
-        {% else %}
-            <b>Rooms Allotted</b> :<br>
-            {% for temp in booking_info %}
-                Hostel : {{ temp.hostel_allotted }}<br>
-                Room Number : {{ temp.room_no }}<br>
-                Type : {{ temp.room_type }}<br>
-                ==================<br>
-            {% endfor %}
-        {% endif %}
-    {% endif %}
+        <!--   you can change the color of the sidebar using: data-color="blue | azure | green | orange | red | purple" -->
+
+
+        <div class="sidebar-wrapper">
+            <div class="logo">
+                <a href="http://www.iiita.ac.in" class="simple-text">
+                    {{ request.user.get_full_name }} ({{ request.user.username }})
+                </a>
+            </div>
+
+            <ul class="nav">
+                <li>
+                    <a href="{% url 'homepage' %}">
+                        <i class="pe-7s-home"></i>
+                        <p>Dashboard</p>
+                    </a>
+                </li>
+                <li>
+                    <a href="{% url 'edit' %}">
+                        <i class="pe-7s-credit"></i>
+                        <p>Edit</p>
+                    </a>
+                </li>
+                <li class="active">
+                    <a href="https://www.iiita.ac.in/">
+                        <i class="pe-7s-study"></i>
+                        <p>IIIT Allahabad</p>
+                    </a>
+                </li>
+            </ul>
+        </div>
+    </div>
+
+    <div class="main-panel">
+        <nav class="navbar navbar-default navbar-fixed">
+            <div class="container-fluid">
+                <div class="navbar-header">
+                    <button type="button" class="navbar-toggle" data-toggle="collapse"
+                            data-target="#navigation-example-2">
+                        <span class="sr-only">Toggle navigation</span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                        <span class="icon-bar"></span>
+                    </button>
+                    <a class="navbar-brand" href="#">Dashboard</a>
+                </div>
+                <div class="collapse navbar-collapse">
+                    <ul class="nav navbar-nav navbar-right">
+                        <li>
+                            <a href="{% url 'logout' %}">
+                                <p>Logout</p>
+                            </a>
+                        </li>
+                        <li class="separator hidden-lg hidden-md"></li>
+                    </ul>
+                </div>
+            </div>
+        </nav>
+
+
+        <div class="content">
+            <div class="container-fluid">
+                <div class="card">
+                    <div class="header" style="text-align: center">
+                        <h4 class="title">{% if not current_request %}Book A Room{% else %}Booking Info{% endif %}</h4>
+                        <p class="category">{% if not current_request %}Please Fill Out The Below Form{% endif %}</p>
+                    </div>
+                    <div class="content">
+                        <div class="row justify-content-center">
+                            {% if current_request %}
+                                <div class="col-md-3"></div>
+                            {% else %}
+                                <div class="col-md-4"></div>
+                            {% endif %}
+
+                            <div class="col-md-6">
+                                {% if not current_request %}
+                                    <h4>Total Available Rooms : {{ rooms }}</h4>
+                                    <form method="POST" class="form-inline form-group form-group-sm">
+                                        {% csrf_token %}
+                                        {{ form.as_p }}
+                                        <button type="submit" class="btn">Submit</button>
+                                    </form>
+                                {% else %}
+                                    <table class="table table-hover table-striped">
+                                        <tbody>
+                                        <tr>
+                                            <td><strong>Number Of Rooms Required</strong></td>
+                                            <td>{{ current_request.no_of_rooms_required }}</td>
+                                        </tr>
+                                        <tr>
+                                            <td><strong>From Date</strong></td>
+                                            <td>{{ current_request.from_date }}</td>
+                                        </tr>
+                                        <tr>
+                                            <td><strong>To</strong></td>
+                                            <td>{{ current_request.to_date }}</td>
+                                        </tr>
+                                        <tr>
+                                            <td><strong>Room Preference</strong></td>
+                                            <td>{{ current_request.room_preference }}</td>
+                                        </tr>
+                                        <tr>
+                                            <td><strong>Status</strong></td>
+                                            <td>{% if current_request.status %}Confirmed{% else %}Not Confirmed
+                                                Yet{% endif %}</td>
+                                        </tr>
+                                        </tbody>
+                                    </table>
+                                    {% if not current_request.status %}
+                                        <a href="{% url 'edit' %}">
+                                            <button class="btn">Edit</button>
+                                        </a>
+                                    {% endif %}
+                                {% endif %}
+
+                                {% if current_request %}
+                                    {% if current_request.status %}
+                                        {% for temp in booking_info %}
+                                            <hr>
+                                            <table class="table table-hover table-bordered">
+                                                <tbody>
+                                                <tr>
+                                                    <td><strong>Room Allotted</strong></td>
+                                                    <td>{{ temp.room_no }}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td><strong>Hostel Name</strong></td>
+                                                    <td>{{ temp.hostel_allotted }}</td>
+                                                </tr>
+                                                <tr>
+                                                    <td><strong>Room Type</strong></td>
+                                                    <td>{{ temp.room_type }}</td>
+                                                </tr>
+                                                </tbody>
+                                            </table>
+                                        {% endfor %}
+                                    {% endif %}
+                                {% endif %}
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                {#            </div>#}
+            </div>
+
+
+            <footer class="footer">
+                <div class="container-fluid">
+                    <nav class="pull-left">
+                        <ul>
+                            {#                            <li>#}
+                            {#                                <a href="#">#}
+                            {#                                    Home#}
+                            {#                                </a>#}
+                            {#                            </li>#}
+                        </ul>
+                    </nav>
+                </div>
+            </footer>
+
+        </div>
+    </div>
+{% endblock %}
+{% block extra_script %}
+    <script type="text/javascript">
+        $(document).ready(function () {
+
+            demo.initChartist();
+
+            $.notify({
+                icon: 'pe-7s-date',
+                message: "Welcome To Booking Portal"
+
+            }, {
+                type: 'info',
+                timer: 4000
+            });
+
+        });
+    </script>
+    <script src="https://code.jquery.com/jquery-1.12.4.js"></script>
+    <script src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"></script>
+    <script>
+        $(function () {
+            $("#datepicker").datepicker();
+        });
+    </script>
+    <script>
+        $(function () {
+            $("#datepicker1").datepicker();
+        });
+    </script>
 {% endblock %}
