--- a/templates/base.html
+++ b/templates/base.html
@@ -1,12 +1,57 @@
+{% load staticfiles %}
+{% load crispy_forms_tags %}
 <!DOCTYPE html>
 <html>
 <head>
     <title>
-        {% block title %}{% endblock %}
+        {% block title %}Home{% endblock %}
     </title>
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1"/>
+    <meta charset="utf-8"/>
+    <meta content='width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=0' name='viewport'/>
+    <meta name="viewport" content="width=device-width"/>
+
+    <!-- Bootstrap core CSS     -->
+    <link href="{% static 'assets/css/bootstrap.min.css' %}" rel="stylesheet"/>
+
+    <!-- Animation library for notifications   -->
+    <link href="{% static 'assets/css/animate.min.css' %}" rel="stylesheet"/>
+
+    <!--  Light Bootstrap Table core CSS    -->
+    <link href='{% static "assets/css/light-bootstrap-dashboard.css" %}?v=1.4.0' rel="stylesheet"/>
+
+
+    <!--  CSS for Demo Purpose, don't include it in your project     -->
+{#    <link href="{% static 'assets/css/demo.css' %}" rel="stylesheet"/>#}
+
+
+    <!--     Fonts and icons     -->
+    <link href="http://maxcdn.bootstrapcdn.com/font-awesome/4.2.0/css/font-awesome.min.css" rel="stylesheet">
+    <link href='http://fonts.googleapis.com/css?family=Roboto:400,700,300' rel='stylesheet' type='text/css'>
+    <link href="{% static 'assets/css/pe-icon-7-stroke.css' %}" rel="stylesheet"/>
+<link href="{% static 'assets/css/demo.css' %}" rel="stylesheet" />
 </head>
 <body>
 {% block content %}
 {% endblock %}
 </body>
+<!--   Core JS Files   -->
+<script src="{% static 'assets/js/jquery.3.2.1.min.js' %}" type="text/javascript"></script>
+<script src="{% static 'assets/js/bootstrap.min.js' %}" type="text/javascript"></script>
+
+<!--  Charts Plugin -->
+<script src="{% static 'assets/js/chartist.min.js' %}"></script>
+  <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+
+<!--  Notifications Plugin    -->
+<script src="{% static 'assets/js/bootstrap-notify.js' %}"></script>
+
+<!-- Light Bootstrap Table Core javascript and methods for Demo purpose -->
+<script src="{% static 'assets/js/light-bootstrap-dashboard.js' %}?v=1.4.0"></script>
+
+<!-- Light Bootstrap Table DEMO methods, don't include it in your project! -->
+{#<script src="{% static 'assets/js/demo.js' %}"></script>#}
+<script src="{% static 'assets/js/moment.js' %}"></script>
+{% block extra_script %}
+{% endblock %}
 </html>
